syntax = "proto3";
package demo;

// Golang Options
option go_package = "./demo";

import "google/protobuf/timestamp.proto";

service RandomNumber {
  rpc GetRandomNumber (GetRandomNumberRequest) returns (GetRandomNumberResponse) {}
  rpc GetRandomNumberStream (GetRandomNumberRequest) returns (stream GetRandomNumberRequest) {}
}

message GetRandomNumberRequest {}
message GetRandomNumberResponse {
  int64 random_number = 1;
  google.protobuf.Timestamp time = 2;
}


